@startuml

class Especialidad {
    - String nombre
    - String descripcion
    - Integer id
    + get()
    + set()
}

class Curso {
    - String nombre
    - Integer id
    - String descripcion
    - Integer especialidadId
    - String urlImagen
    + get()
    + set()
}

class Usuario {
    - String nombreUsuario
    - String constraseña
    - String nombre
    - String correo
    - Boolean activo
    - Boolean admin
    + set()
    + get()
}

Especialidad "1" o-- "*" Curso
Usuario "1" o-- "*" Especialidad
Usuario "1" o-- "*" Curso

@enduml